--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="style.css">
     <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Engima</title>
+    <title>Engima Home</title>
 
 <body>
     <div class="header" id="header">
-        <a href="/" class="logo"><span>Engi</span>ma</a>
+        <a href="/" class="logo"><span>Engi</span>mas</a>
         <div id="search-container">
             <form id="search-bar" action="/search">
                 <input type="text" placeholder="Search movie" name="name">
