--- a/login/index.html
+++ b/login/index.html
@@ -20,12 +20,12 @@
             <button class="button" type="submit">Login</button>
         </form>
         <div class="footer">
-            <p><b>Don't have an account? <a href="/register">Register here</a><b></p>
+            <p><b>Don't have an account? <a href="/engima/register">Register here</a><b></p>
         </div>
     </div>
 </body>
 
 </html>
 
-<script src="/scripts/disablelogin.js" type="text/javascript"></script>
+<script src="/engima/scripts/disablelogin.js" type="text/javascript"></script>
 <script src="script.js" type="text/javascript"></script>
