--- a/detail/index.html
+++ b/detail/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/engima/style.css">
     <link rel="stylesheet" href="style.css">
     <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -11,16 +11,16 @@
 
 <body>
     <div class="header" id="header">
-        <a href="/" class="logo"><span>Engi</span>ma</a>
+        <a href="/engima" class="logo"><span>Engi</span>ma</a>
         <div id="search-container">
-            <form id="search-bar" action="/search">
+            <form id="search-bar" action="/engima/search">
                 <input type="text" placeholder="Search movie" name="name">
                 <button type="submit"><i class="fa fa-search"></i></button>
             </form>
         </div>
         <div class="header-right">
-            <a href="/transactions">Transactions</a>
-            <a href="/logout">Logout</a>
+            <a href="/engima/transactions">Transactions</a>
+            <a href="/engima/logout">Logout</a>
         </div>
     </div>
 
@@ -71,5 +71,5 @@
 
 </html>
 
-<script src="/scripts/shouldlogin.js" type="text/javascript"></script>
+<script src="/engima/scripts/shouldlogin.js" type="text/javascript"></script>
 <script src="script.js" type="text/javascript"></script>
