--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 
 <body>
     <div class="header" id="header">
-        <a href="/" class="logo"><span>Engi</span>ma</a>
+        <a href="/engima" class="logo"><span>Engi</span>ma</a>
         <div id="search-container">
-            <form id="search-bar" action="/search">
+            <form id="search-bar" action="/engima/search">
                 <input type="text" placeholder="Search movie" name="name">
                 <button type="submit"><i class="fa fa-search"></i></button>
             </form>
         </div>
         <div class="header-right">
-            <a href="/transactions">Transactions</a>
-            <a href="/logout">Logout</a>
+            <a href="/engima/transactions">Transactions</a>
+            <a href="/engima/logout">Logout</a>
         </div>
     </div>
 
@@ -32,5 +32,5 @@
 
 </html>
 
-<script src="/scripts/utils.js" type="text/javascript"></script>
+<script src="/engima/scripts/utils.js" type="text/javascript"></script>
 <script src="script.js" type="text/javascript"></script>
