--- a/register/index.html
+++ b/register/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Register</title>
-    <link rel="stylesheet" type="text/css" href="/login/style.css">
+    <link rel="stylesheet" type="text/css" href="/engima/login/style.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 </head>
@@ -41,13 +41,13 @@
             <button class="button" type="submit">Register</button>
         </form>
         <div class="footer">
-            <p><b>Already have account? <a href="/login">Login here</a><b></p>
+            <p><b>Already have account? <a href="/engima/login">Login here</a><b></p>
         </div>
     </div>
 </body>
 
 </html>
 
-<script src="/scripts/disablelogin.js" type="text/javascript"></script>
-<script src="/scripts/utils.js" type="text/javascript"></script>
+<script src="/engima/scripts/disablelogin.js" type="text/javascript"></script>
+<script src="/engima/scripts/utils.js" type="text/javascript"></script>
 <script src="script.js" type="text/javascript"></script>
